--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,12 @@
     url("/assets/img/img-inicio.png");
   background-size: cover;
   background-position: center;
-  background-color: #333;
   min-height: 70vh;
+}
+
+.footer-icon {
+  color: #ffffff;
+  font-size: 20px;
+  margin: 10px;
+  text-decoration: none;
 }
